# crossengine

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: run_all.py  run_summary.py
benchmarks/01-equal-weight/: README.md  run.py
benchmarks/02-stay-drift/: README.md  run.py
benchmarks/03-rotation/: README.md  run.py
benchmarks/04-rotation-with-cost/: README.md  run.py
benchmarks/05-sma-momentum/: run.py
benchmarks/06-inverse-vol/: run.py
benchmarks/07-cross-momentum/: run.py
benchmarks/08-ml-signal/: run.py
benchmarks/08-ml-signal/approaches/: enet.py  gbr.py  mlp.py  rf.py
benchmarks/09-daily-binary-switch/: run.py
benchmarks/10-cash-starved/: run.py
benchmarks/11-concentrated-cascade/: run.py
benchmarks/12-daily-equal-weight/: run.py
benchmarks/summary/: __init__.py  bucket_data.py  collect.py  concordance.py  concordance_diagnostics.py  profiling_collect.py  run.py
benchmarks/summary/figures/: __init__.py  _common.py  _divergence.py  _equity.py  _heatmap.py  _implementation_risk.py  _mechanism.py  _profiling.py  _risk_return.py  _significance.py  _statistical.py  _statistical_extra.py  _statistical_helpers.py  _tables.py
benchmarks/utils/: __init__.py  _comparison_plots.py  _runner_agg.py  _runner_plots.py  comparison.py  data.py  engine.py  log.py  resolve.py  runner.py  strategies.py  types.py
benchmarks/utils/wrappers/: __init__.py  backtrader_engine.py  bt_engine.py  cvxportfolio_engine.py  nautilus_engine.py  ours.py  vectorbt_engine.py  zipline_engine.py
data/curation/: README.md  bucket_qc.py  build_universe.py  download_yfinance.py  qc.py  stratification.py  verify_results.json  verify_universe.py
docs/: api.md
src/backtest/: __init__.py  orders.py  portfolio.py  result.py  signals.py
src/backtest/models/: __init__.py
src/crossengine/: __init__.py  data.py  engine.py  metrics.py  result.py
src/crossengine/concordance/: __init__.py  api.py  engines.py  report.py  resolve.py  types.py
src/crossengine/models/: commission.py  slippage.py
tests/: conftest.py  test_bm02_simplified.py  test_concordance_api.py  test_core.py  test_e2e_5engine.py  test_e2e_full.py  test_e2e_paper_comparison.py  test_orchestrator.py  test_resolve_stay.py  test_signal_schedule.py  test_wrapper_stay.py
