[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest"
version = "0.1.0"
description = "Standalone multi-asset portfolio backtesting engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
