[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossengine"
version = "0.1.0"
description = "Multi-asset portfolio backtesting engine with cross-engine concordance testing"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/crossengine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
