[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossengine"
version = "0.1.0"
description = "Multi-asset portfolio backtesting engine with cross-engine concordance testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Don Yin", email = "dy323@cam.ac.uk"},
    {name = "Takeshi Miki"},
    {name = "Vladislav Lesnichenko"},
]
keywords = ["backtesting", "portfolio", "concordance", "implementation-risk", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "matplotlib>=3.7"]

[project.urls]
Repository = "https://github.com/Don-Yin/crossengine"
Documentation = "https://github.com/Don-Yin/crossengine#readme"
Issues = "https://github.com/Don-Yin/crossengine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crossengine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
